# search_engine

./: CMakeLists.txt  ConverterJSON.cpp  ConverterJSON.h  InvertedIndex.cpp  InvertedIndex.h  README.md  SearchServer.cpp  SearchServer.h  answers.json  config.json  main.cpp  requests.json  tests.cpp
config/: answers.json  config.json  requests.json
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
resources/: text1.txt  text2.txt  text3.txt
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  index_tests.cpp  server_tests.cpp
